--- a/book-visit-app-server/package.json
+++ b/book-visit-app-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "node-mandrill": "^1.0.1",
     "nodemailer": "^6.6.5",
