--- a/book-visit-app/package.json
+++ b/book-visit-app/package.json
@@ -11,6 +11,7 @@
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-bootstrap-time-picker": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
