--- a/book-visit-app-server/package.json
+++ b/book-visit-app-server/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^8.0.0",
+    "firebase-admin": "^9.12.0",
+    "jsonwebtoken": "^8.5.1",
     "node-mandrill": "^1.0.1",
     "nodemailer": "^6.6.5",
     "socker.io": "0.0.0-alpha-beta",
