--- a/book-visit-app/package.json
+++ b/book-visit-app/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.1.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.5",
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
