--- a/book-visit-app-server/package.json
+++ b/book-visit-app-server/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "cd book-visit-app && npm install && npm run build",
     "start": "node index"
   },
   "keywords": [],
