--- a/book-visit-app-server/package.json
+++ b/book-visit-app-server/package.json
@@ -12,8 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd book-visit-app && npm install && npm run build",
     "start": "node index",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "cd book-visit-app && npm run build",
+    "deploy": "cd book-visit-app && gh-pages -d build"
   },
   "keywords": [],
   "author": "",
